Add lab11 template

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                 <td><a href="LAB10/Luizett/view.html">Luizett</a></td>
                 <td><a href="LAB10/mpustovoi/index.html">mpustovoi</a></td>
             </tr>
+            <tr>
+                <th colspan="4"><a href="LAB11/index.html">Лабораторная 11</a></th>
+            </tr>
         </table>
     </body>
 </html>
