Add lab12 template

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <tr>
                 <th colspan="4"><a href="LAB11/index.html">Лабораторная 11</a></th>
             </tr>
+            <tr>
+                <th colspan="4"><a href="LAB12/index.html">Лабораторная 12</a></th>
+            </tr>
         </table>
     </body>
 </html>
