Added a gradient tetrahedron
Added a gradient tetrahedron that can be moved along the axes.

Included `gl-matrix` library.

--- a/LAB12/index.html
+++ b/LAB12/index.html
@@ -72,6 +72,9 @@
             </td>
         </tr>
     </table>
+    <!-- Подключение библиотеки gl-matrix — инструмента для работы с матрицами и векторами -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
+
     <script src="task1.js"></script>
     <script src="task2.js"></script>
     <script src="task3.js"></script>
