--- a/Indiv2/ConrellBoxKhoruzhaya/index.html
+++ b/Indiv2/ConrellBoxKhoruzhaya/index.html
@@ -14,6 +14,8 @@
             margin: auto;
             border: 2px solid black;
             background-color: #ffffff;
+            width: 500px;
+            height: 500px;
         }
     </style>
 </head>
