Add new labs refs to index.html

--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
     <head>
         <title>WebGL labs</title>
     </head>
+    <link rel="stylesheet" href="resources/styles.css">
     <body>
         <h1>Лабораторные работы модуля 3 (WebGL)</h1>
-        <table border="1" width="50%">
+        <table>
             <tr>
                 <th>Лабораторная 10</th>
                 <td><a href="LAB10/comprock15/index.html">comprock15</a></td>
                 <td><a href="LAB10/Luizett/view.html">Luizett</a></td>
                 <td><a href="LAB10/mpustovoi/index.html">mpustovoi</a></td>
+                <td rowspan="5"><a href="index.html"><img src="resources/funnyBear.gif"></a></td>
             </tr>
             <tr>
                 <th colspan="4"><a href="LAB11/index.html">Лабораторная 11</a></th>
             </tr>
             <tr>
                 <th colspan="4"><a href="LAB12/index.html">Лабораторная 12</a></th>
+            </tr>
+            <tr>
+                <th colspan="4"><a href="LAB13/index.html">Лабораторная 13</a></th>
+            </tr>
+            <tr>
+                <th colspan="4"><a href="LAB14/index.html">Лабораторная 14</a></th>
             </tr>
         </table>
     </body>
