Add rotation around main object for one object

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="resources/funnyBear.gif">
         <title>WebGL labs</title>
     </head>
     <link rel="stylesheet" href="resources/styles.css">
