--- a/LAB13/index.html
+++ b/LAB13/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>Солнечная система</h1>
+    <h1>Солнечная система?</h1>
 
     <!-- Кнопка для загрузки файлов -->
     <input type="file" id="fileInput" accept=".obj" multiple />
