Add welcome audio 😎
Cause why not

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
                 <th colspan="4"><a href="LAB14/index.html">Лабораторная 14</a></th>
             </tr>
         </table>
+        <audio src="resources/welcome.mp3" autoplay></audio>
     </body>
 </html>
