Add secondary light source

--- a/Indiv2/ConrellBoxKhoruzhaya/index.html
+++ b/Indiv2/ConrellBoxKhoruzhaya/index.html
@@ -11,7 +11,7 @@
     <h1>Корнуэльская комната</h1>
     <table>
         <tr>
-            <td rowspan="2">
+            <td rowspan="3">
                 <canvas id="canvas">Элемент сanvas не поддерживается</canvas>
             </td>
             <!--Задание параметров объектов-->
@@ -136,10 +136,15 @@
         </tr>
         <tr>
             <td>
-            <img src="lizard.gif" height="100">
-            <button id="render" class="glow-on-hover"><b>РЕНДЕР</b></button>    
-            <img src="lizard.gif" height="100">
-        </td>
+                <input type="checkbox" id="light1">Второй источник света
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="lizard.gif" height="100">
+                <button id="render" class="glow-on-hover"><b>РЕНДЕР</b></button>    
+                <img src="lizard.gif" height="100">
+            </td>
         </tr>
     </table>
     <!--Загрузка -->
