--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
                 <td><a href="LAB10/comprock15/index.html">comprock15</a></td>
                 <td><a href="LAB10/Luizett/view.html">Luizett</a></td>
                 <td><a href="LAB10/mpustovoi/index.html">mpustovoi</a></td>
-                <td rowspan="5"><a href="index.html"><img src="resources/funnyBear.gif"></a></td>
+                <!--Медведь здесь-->
+                <td rowspan="7">
+                    <a href="index.html"><img src="resources/funnyBear.gif"></a>
+                    <br>
+                    <audio src="resources/welcome.mp3" autoplay></audio>
+                </td>
             </tr>
             <tr>
                 <th colspan="4"><a href="LAB11/index.html">Лабораторная 11</a></th>
@@ -27,7 +32,18 @@
             <tr>
                 <th colspan="4"><a href="LAB14/index.html">Лабораторная 14</a></th>
             </tr>
+            <tr>
+                <th>Индивидуальное задание 2</th>
+                <td><a href="Indiv2/CornellBoxKhoruzhaya/index.html">comprock15</a></td>
+            </tr>
+            <tr>
+                <th>Индивидуальное задание 3</th>
+                <!--
+                <td><a href="">comprock15</a></td>
+                <td><a href="">Luizett</a></td>
+                <td><a href="">mpustovoi</a></td>
+                -->
+            </tr>
         </table>
-        <audio src="resources/welcome.mp3" autoplay></audio>
     </body>
 </html>
