--- a/LAB13/index.html
+++ b/LAB13/index.html
@@ -29,6 +29,32 @@
     <!-- Холст для отрисовки объектов -->
     <canvas id="glcanvas" width="800" height="600"></canvas>
 
+    <!-- Кнопка для использования базовых объектов -->
+    <br>
+    <button id="useDefaultButton">Использовать объекты по умолчанию</button>
+    <script>
+      // Получаем элемент кнопки
+      const useDefaultButton = document.getElementById('useDefaultButton');
+
+      // Обработчик события нажатия на кнопку
+      useDefaultButton.addEventListener('click', async () => {
+          const response1 = await fetch("Cow.obj");
+          const text1 = await response1.text();
+          
+          const response2 = await fetch("Hamburger.obj");
+          const text2 = await response2.text();
+
+          objectsData[0] = parseObj(text1);
+          objectsData[1] = parseObj(text2);
+
+          // Инициализация объектов после успешной загрузки обоих файлов
+          if (objectsData[0] && objectsData[1]) {
+              initObj(gl, objectsData[0]);
+              initObj(gl, objectsData[1]);
+          }
+      });
+    </script>
+
     <!-- Подключение библиотеки для работы с линейной алгеброй -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
 
