--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </tr>
             <tr>
                 <th>Индивидуальное задание 3</th>
+                <td><a href="Indiv3/comprock15/index.html">comprock15</a></td>
+                <td><a href="Indiv3/luizett/index.html">Luizett</a></td>
                 <!--
-                <td><a href="">comprock15</a></td>
-                <td><a href="">Luizett</a></td>
                 <td><a href="">mpustovoi</a></td>
                 -->
             </tr>
